fix top bar alignment

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -52,10 +52,7 @@ $input-shadow: none;
 
 $navbar-padding-vertical: 0;
 $navbar-padding-horizontal: 10%;
-$navbar-breakpoint: 0;
 
-//$gap: 120px;
-$container-max-width: 50px;
 
 // Import only what you need from Bulma
 @import "../node_modules/bulma/sass/utilities/_all.sass";
